Add module test line in config

--- a/test/nextflow.config
+++ b/test/nextflow.config
@@ -4,6 +4,11 @@ quantDir = "$baseDir/quantification"
 
 //env.PATH="$binDir:$binDir/gemtools-1.6.2-i3/bin:$binDir/flux-capacitor-1.2.4/bin:$PATH"
 
+env {
+    IDX_FILE="$baseDir/index.txt"
+    IDX_FORMAT="$baseDir/format.json"
+}
+
 process {
     
     //executor = 'sge'
@@ -16,5 +21,6 @@ process {
 
     $test {
         executor = 'local'
+        module = 'samtools:bedtools'
     }
 }
