--- a/test/nextflow.config
+++ b/test/nextflow.config
@@ -1,26 +1,27 @@
-baseDir = "$PWD"                                                                                                                                                                                                                       
-binDir = "$baseDir/bin"
+baseDir  = "$PWD"                                                                                                                                                                                                                       
+binDir   = "$baseDir/bin"
 quantDir = "$baseDir/quantification"
 
-//env.PATH="$binDir:$binDir/gemtools-1.6.2-i3/bin:$binDir/flux-capacitor-1.2.4/bin:$PATH"
-
 env {
-    IDX_FILE="$baseDir/index.txt"
-    IDX_FORMAT="$baseDir/format.json"
+    IDX_FILE   = "$baseDir/index.txt"
+    IDX_FORMAT = "$baseDir/format.json"
 }
 
 process {
     
     //executor = 'sge'
     executor = 'local'
-    queue = 'rg-el6'
+    queue    = 'rg-el6'
 
-    $index.module = $t_index.module = $mapping.module = 'gemtools/1.7.1-i3'
-    $bigwig.module = $contig.module = 'bedtools'
+    $index.module          = 'gemtools/1.7.1-i3'
+    $t_index.module        = 'gemtools/1.7.1-i3' 
+    $mapping.module        = 'gemtools/1.7.1-i3'
+    $bigwig.module         = 'bedtools/2.19.1'
+    $contig.module         = 'bedtools/2.19.1'
     $quantification.module = 'flux/1.6.1'
 
     $test {
         executor = 'local'
-        module = 'samtools:bedtools'
+        module   = 'samtools:bedtools'
     }
 }
