--- a/nextflow.test.config
+++ b/nextflow.test.config
@@ -79,8 +79,12 @@ process {
     $index.module          = 'gemtools/1.6.2-i3'
     $t_index.module        = 'gemtools/1.6.2-i3'
     $mapping.module        = 'gemtools/1.6.2-i3'
-    $bigwig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
-    $contig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
+    $filter.module         = 'pigz/2.3.1-goolf-1.4.10-no-OFED' 
+    $gemStats.module       = 'gemtools/1.6.2-i3'
+    $gemToBam.module       = 'gemtools/1.6.2-i3:pigz/2.3.1-goolf-1.4.10-no-OFED:SAMtools/0.1.19-goolf-1.4.10-no-OFED'
+    $bigwig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:bamflag/master-goolf-1.4.10-no-OFED:ucsc/2013.02'
+    $contig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:bamflag/master-goolf-1.4.10-no-OFED:ucsc/2013.02'
     $quantification.module = 'flux/1.2.4'
+    $store.module          = 'idxtools/0.9.1-goolf-1.4.10-no-OFED-Python-2.7.3'
 
 }
