--- a/nextflow.config
+++ b/nextflow.config
@@ -1,24 +1,11 @@
 // Parameters
-env = System.getenv()
 params {
 
-    //The input file
-    input = 'test/*.fastq.gz'
-    
-    //The reference genome file
-    genome = 'tutorial/data/genome_1Mbp.fa'
-    
-    //The reference gene annotation file
-    annotation = 'tutorial/data/annotation.gtf'
-    
     //The steps to be executed
     steps = 'mapping,bigwig,contig,flux'
     
     //The local temporary folder to copy files when running on shared file systems. Default: TMPDIR
-    tmp_dir = (env.TMPDIR != null ? true : false)
-    
-    //Number of threads. Default 1
-    cpus = 1
+    tmpDir = ($TMPDIR != null ? true : false)
     
     //Max number of mismatches. Default 4
     mismatches = 4
@@ -27,34 +14,31 @@ params {
     hits = 10
     
     //The quality offset of the fastq files. Default: 33
-    quality_offset = 33
+    qualityOffset = 33
     
     //The maximum read length (used to compute the transcriptomes). Default: 150
-    max_read_length = 150
+    maxReadLength = 150
     
     //The directionality of the reads (MATE1_SENSE, MATE2_SENSE, NONE). Default NONE
-    read_strand = 'NONE'
+    readStrand = 'NONE'
     
     //Specify whether the data is paired-end. Default: false
-    paired_end = true
+    pairedEnd = false
     
     //A comma separated list of tags for the @RG field of the BAM file. Check the SAM specification for details. Default: none
-    read_group = ''
+    readGroup = ''
     
     //Run the RSeQC stats on the bam file. Default false
-    bam_stats = false
+    bamStats = false
     
     //A comma separated list of elements to be counted by the Flux Capacitor. Possible values: INTRONS,SPLICE_JUNCTIONS. Defalut: none
-    count_elements = []
+    countElements = []
     
     //The amount of ram the Flux Capacitor can use. Default: 3G
-    flux_mem = '3G'
+    fluxMem = '3G'
     
     // Create flux profile file                                                                                                                                                                                                              
-    flux_profile = false
-
-    //The general output folder
-    outdir = "$PWD"
+    fluxProfile = false
     
 }
 
