Update modules versions

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,11 +5,14 @@ process {
     /* executor = 'sge'
     queue    = 'rg-el6' */
 
-    $index.module          = 'gemtools/1.7.1-i3'
-    $t_index.module        = 'gemtools/1.7.1-i3'
-    $mapping.module        = 'gemtools/1.7.1-i3'
+    $index.module          = 'gemtools/1.6.2-i3'
+    $t_index.module        = 'gemtools/1.6.2-i3'
+    $mapping.module        = 'gemtools/1.6.2-i3'
+    $filter.module         = 'gemtools/1.6.2-i3:pigz'
+    $gemStats.module       = 'gemtools/1.6.2-i3'
+    $gemToBam.module       = 'gemtools/1.6.2-i3:pigz'
     $bigwig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
-    $contig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
-    $quantification.module = 'flux/1.6.1'
+    $contig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:SAMtools/0.1.19-goolf-1.4.10-no-OFED:bamflag'
+    $quantification.module = 'flux/1.2.4'
 
 }
