Add ucsc module for inferring experiment configuration

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@ process {
     $filter.module         = 'gemtools/1.6.2-i3:pigz'
     $gemStats.module       = 'gemtools/1.6.2-i3'
     $gemToBam.module       = 'gemtools/1.6.2-i3:pigz'
+    $inferExp.module       = 'ucsc'
     $bigwig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
     $contig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:SAMtools/0.1.19-goolf-1.4.10-no-OFED:bamflag'
     $quantification.module = 'flux/1.2.4'
