--- a/nextflow.config
+++ b/nextflow.config
@@ -1,19 +1,63 @@
 // Process Configuration
 process {
 
-    executor = 'local'
-    /* executor = 'sge'
-    queue    = 'rg-el6' */
+    executor = 'sge'
+    queue    = 'rg-el6'
+    penv = 'smp'
 
-    $index.module          = 'gemtools/1.6.2-i3'
-    $t_index.module        = 'gemtools/1.6.2-i3'
-    $mapping.module        = 'gemtools/1.6.2-i3'
-    $filter.module         = 'gemtools/1.6.2-i3:pigz'
-    $gemStats.module       = 'gemtools/1.6.2-i3'
-    $gemToBam.module       = 'gemtools/1.6.2-i3:pigz'
-    $inferExp.module       = 'ucsc'
-    $bigwig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
-    $contig.module         = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:SAMtools/0.1.19-goolf-1.4.10-no-OFED:bamflag'
-    $quantification.module = 'flux/1.2.4'
+    $index {
+        module = 'gemtools/1.6.2-i3'
+        cpus = 4
+        memory = '16G'
+        time = '24h'
+    }
+    $t_index {
+        module = 'gemtools/1.6.2-i3'
+        cpus = 4
+        memory = '16G'
+        time = '24h'
+    }
+    $mapping {
+        module = 'gemtools/1.6.2-i3'
+        cpus = 8
+        memory = '64G'
+        time = '48h'
+    }
+    $filter {
+        module = 'gemtools/1.6.2-i3:pigz'
+        cpus = 8
+        memory = '64G'
+        time = '24h'
+    }
+    $gemStats {
+        module = 'gemtools/1.6.2-i3'
+        cpus = 8
+        memory = '16G'
+    }
+    $gemToBam {
+        module = 'gemtools/1.6.2-i3:pigz'
+        cpus = 8
+        memory = '64G'
+    }
+    $inferExp {
+        module = 'ucsc'
+    }
+    $bigwig {
+        module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
+        cpus = 4
+        memory = '16G'
+        time = '12h'
+    }
+    $contig {
+        module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:SAMtools/0.1.19-goolf-1.4.10-no-OFED:bamflag'
+        cpus = 4
+        memory = '16G'
+        time = '12h'
+    }
+    $quantification {
+        module = 'flux/1.2.4'
+        memory = '32G'
+        time = '24h'
+    }
 
 }
