--- a/nextflow.config
+++ b/nextflow.config
@@ -6,38 +6,31 @@ process {
     penv = 'smp'
 
     $index {
-        module = 'gemtools/1.6.2-i3'
+        module = 'gemtools/1.7.1-i3'
         cpus = 4
         memory = '16G'
         time = '24h'
     }
     $t_index {
-        module = 'gemtools/1.6.2-i3'
+        module = 'gemtools/1.7.1-i3'
         cpus = 4
         memory = '16G'
         time = '24h'
     }
     $mapping {
-        module = 'gemtools/1.6.2-i3'
+        module = 'gemtools/1.7.1-i3'
         cpus = 8
         memory = '64G'
         time = '48h'
     }
-    $filter {
-        module = 'gemtools/1.6.2-i3:pigz'
-        cpus = 8
-        memory = '64G'
-        time = '24h'
-    }
-    $gemStats {
-        module = 'gemtools/1.6.2-i3'
-        cpus = 8
-        memory = '16G'
-    }
     $gemToBam {
-        module = 'gemtools/1.6.2-i3:pigz'
+        module = 'gemtools/1.7.1-i3:pigz'
         cpus = 8
-        memory = '64G'
+        memory = '64G'        
+    }
+    $mergeBam {
+        cpus = 8
+        memory = '32G' 
     }
     $inferExp {
         module = 'ucsc'
@@ -55,7 +48,7 @@ process {
         time = '12h'
     }
     $quantification {
-        module = 'flux/1.2.4'
+        module = 'flux/1.6.1'
         memory = '32G'
         time = '24h'
     }
