Increase wallclock time for gemToBam

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,11 +26,12 @@ process {
     $gemToBam {
         module = 'gemtools/1.7.1-i3:pigz'
         cpus = 8
-        memory = '64G'        
+        memory = '64G'
+        time = '12h'
     }
     $mergeBam {
         cpus = 8
-        memory = '32G' 
+        memory = '32G'
     }
     $inferExp {
         module = 'ucsc'
