Fix issue with pysam in RSeQC

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,7 +34,7 @@ process {
         memory = '31G'
     }
     $inferExp {
-        module = 'RSeQC/2.3.9-goolf-1.4.10-no-OFED-Python-2.7.3:ucsc'
+        module = 'RSeQC/2.3.9-goolf-1.4.10-no-OFED-Python-2.7.3:pysam/0.8.0-goolf-1.4.10-no-OFED-Python-2.7.3:ucsc'
     }
     $bigwig {
         module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
