Update modules in nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,35 +6,36 @@ process {
     penv = 'smp'
 
     $index {
-        module = 'gemtools/1.7.1-i3'
+        module = 'GEMtools/1.7.1-goolf-1.4.10-no-OFED-Python-2.7.3'
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $t_index {
-        module = 'gemtools/1.7.1-i3'
+        module = 'GEMtools/1.7.1-goolf-1.4.10-no-OFED-Python-2.7.3'
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $mapping {
-        module = 'gemtools/1.7.1-i3'
+        module = 'GEMtools/1.7.1-goolf-1.4.10-no-OFED-Python-2.7.3'
         cpus = 8
         memory = '62G'
         time = '48h'
     }
     $gemToBam {
-        module = 'gemtools/1.7.1-i3:pigz'
+        module = 'GEMtools/1.7.1-goolf-1.4.10-no-OFED-Python-2.7.3:pigz'
         cpus = 8
         memory = '62G'
         time = '12h'
     }
     $mergeBam {
+        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED'
         cpus = 8
         memory = '31G'
     }
     $inferExp {
-        module = 'RSeQC/2.3.9-goolf-1.4.10-no-OFED-Python-2.7.3:pysam/0.8.0-goolf-1.4.10-no-OFED-Python-2.7.3:ucsc'
+        module = 'RSeQC/2.3.9-goolf-1.4.10-no-OFED-Python-2.7.3:pysam/0.8.0-goolf-1.4.10-no-OFED-Python-2.7.3:KentUtils/308-goolf-1.4.10-no-OFED'
     }
     $bigwig {
         module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED'
@@ -43,13 +44,13 @@ process {
         time = '12h'
     }
     $contig {
-        module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:SAMtools/0.1.19-goolf-1.4.10-no-OFED:bamflag'
+        module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:bamflag'
         cpus = 4
         memory = '15G'
         time = '12h'
     }
     $quantification {
-        module = 'flux/1.6.1'
+        module = 'flux-capacitor/1.6.1-Java-1.7.0_21'
         memory = '31G'
         time = '24h'
     }
