Update module config for contig process

--- a/nextflow.config
+++ b/nextflow.config
@@ -47,7 +47,7 @@ process {
         time = '12h'
     }
     $contig {
-        module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:bamflag'
+        module = 'BEDTools/2.19.1-goolf-1.4.10-no-OFED:BamTools/2.3.0-goolf-no-OFED'
         cpus = 4
         memory = '31G'
         time = '12h'
