Add error strategy parameter and process tags

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,11 @@ process {
 
     executor = 'sge'
     queue    = 'rg-el6,long-sl65'
-    penv = 'smp'
+    penv = 'smp '
+
+    errorStrategy = { params?.errorStrategy }
+    
+    tag = { if (view) id else species }
 
     $index {
         module = 'GEMtools/1.7.1-goolf-1.4.10-no-OFED-Python-2.7.3'
