Rename pipeline script and update configuration

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,5 @@
 // main script name
-manifest.mainScript = 'blueprint.pipeline.nf'
+manifest.mainScript = 'grape-pipeline.nf'
 
 // Process Configuration
 process {
