Update general configuration

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,8 +31,10 @@ process {
     $mergeBam {
         cpus = 8
         memory = '31G'
+        time = '12h'
     }
     $inferExp {
+        time = '2h'
     }
     $bigwig {
         cpus = 4
