Update nextflow configuration for STAR-RSEM pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,49 +4,60 @@ manifest.mainScript = 'grape-pipeline.nf'
 // Process Configuration
 process {
 
+    executor = 'sge'
+    queue    = 'rg-el6,long-sl65'
+    penv = 'smp '
+
     errorStrategy = { params?.errorStrategy }
     
     tag = { if (view) id else species }
 
     $index {
+        module = 'STAR/2.4.0h1-goolf-1.4.10-no-OFED'
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $t_index {
+        module = 'RSEM/1.2.15-goolf-1.4.10-no-OFED'
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $mapping {
+        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:pigz/2.3.1-goolf-1.4.10-no-OFED:STAR/2.4.0h1-goolf-1.4.10-no-OFED'
         cpus = 8
         memory = '62G'
         time = '48h'
     }
     $gemToBam {
+        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:pigz/2.3.1-goolf-1.4.10-no-OFED:GEMtools/1.7.1-goolf-1.4.10-no-OFED-Python-2.7.3'
         cpus = 8
         memory = '62G'
         time = '12h'
     }
     $mergeBam {
+        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED'
         cpus = 8
         memory = '31G'
-        time = '12h'
     }
     $inferExp {
-        time = '2h'
+        module = 'RSeQC/2.3.9-goolf-1.4.10-no-OFED-Python-2.7.3:pysam/0.8.0-goolf-1.4.10-no-OFED-Python-2.7.3:KentUtils/308-goolf-1.4.10-no-OFED'
     }
     $bigwig {
+        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:BEDTools/2.19.1-goolf-1.4.10-no-OFED:KentUtils/308-goolf-1.4.10-no-OFED'
         cpus = 4
         memory = '15G'
         time = '12h'
     }
     $contig {
+        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:BEDTools/2.19.1-goolf-1.4.10-no-OFED:BamTools/2.3.0-goolf-no-OFED:KentUtils/308-goolf-1.4.10-no-OFED'
         cpus = 4
         memory = '31G'
         time = '12h'
     }
     $quantification {
+        module = 'RSEM/1.2.15-goolf-1.4.10-no-OFED'
         memory = '31G'
         time = '24h'
     }
