Update configuration for ENCODE 3 pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ process {
     tag = { if (view) id else species }
 
     $index {
-        module = 'STAR/2.4.0h1-goolf-1.4.10-no-OFED'
+        module = 'STAR/2.4.0d-goolf-1.4.10-no-OFED'
         cpus = 4
         memory = '15G'
         time = '24h'
@@ -30,12 +30,6 @@ process {
         memory = '62G'
         time = '48h'
     }
-    $gemToBam {
-        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:pigz/2.3.1-goolf-1.4.10-no-OFED:GEMtools/1.7.1-goolf-1.4.10-no-OFED-Python-2.7.3'
-        cpus = 8
-        memory = '62G'
-        time = '12h'
-    }
     $mergeBam {
         module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED'
         cpus = 8
@@ -45,7 +39,7 @@ process {
         module = 'RSeQC/2.3.9-goolf-1.4.10-no-OFED-Python-2.7.3:pysam/0.8.0-goolf-1.4.10-no-OFED-Python-2.7.3:KentUtils/308-goolf-1.4.10-no-OFED'
     }
     $bigwig {
-        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:BEDTools/2.19.1-goolf-1.4.10-no-OFED:KentUtils/308-goolf-1.4.10-no-OFED'
+        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:STAR/2.4.0d-goolf-1.4.10-no-OFED:KentUtils/308-goolf-1.4.10-no-OFED'
         cpus = 4
         memory = '15G'
         time = '12h'
