Increase memory for STAR genome index and update STAR version to 2.4.0j

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,9 +13,9 @@ process {
     tag = { if (view) id else species }
 
     $index {
-        module = 'STAR/2.4.0d-goolf-1.4.10-no-OFED'
+        module = 'STAR/2.4.0j-goolf-1.4.10-no-OFED'
         cpus = 4
-        memory = '31G'
+        memory = '62G'
         time = '24h'
     }
     $t_index {
