Reorganize nextflow configuration file

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,57 +1,71 @@
 // main script name
 manifest.mainScript = 'grape-pipeline.nf'
 
-// Process Configuration
+//Tools configuration
+toolchain  = 'goolf-1.4.10-no-OFED'
+python     = 'Python-2.7.3'
+
+mapper     = 'STAR/2.4.0j'
+quantifier = 'RSEM/1.2.15'
+samtools   = 'SAMtools/0.1.19'
+decomp     = 'pigz/2.3.1'
+rseqc      = 'RSeQC/2.3.9'
+kentutils  = 'KentUtils/308'
+pysam      = 'pysam/0.8.0'
+bedtools   = 'BEDTools/2.19.1'
+bamtools   = 'BamTools/2.3.1'
+
+// Process configuration
 process {
 
     executor = 'sge'
     queue    = 'rg-el6,long-sl65'
-    penv = 'smp '
+    penv = 'smp'
 
     errorStrategy = { params?.errorStrategy }
     
     tag = { if (view) id else species }
 
     $index {
-        module = 'STAR/2.4.0j-goolf-1.4.10-no-OFED'
+        module = "${mapper}-${toolchain}"
         cpus = 4
         memory = '62G'
         time = '24h'
     }
     $t_index {
-        module = 'RSEM/1.2.15-goolf-1.4.10-no-OFED'
+        module = "${quantifier}-${toolchain}"
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $mapping {
-        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:pigz/2.3.1-goolf-1.4.10-no-OFED:STAR/2.4.0h1-goolf-1.4.10-no-OFED'
+        module = "${samtools}-${toolchain}:${decomp}-${toolchain}:${mapper}-${toolchain}"
         cpus = 8
         memory = '62G'
         time = '48h'
     }
     $mergeBam {
-        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED'
+        module = "${samtools}-${toolchain}"
         cpus = 8
         memory = '31G'
     }
     $inferExp {
-        module = 'RSeQC/2.3.9-goolf-1.4.10-no-OFED-Python-2.7.3:pysam/0.8.0-goolf-1.4.10-no-OFED-Python-2.7.3:KentUtils/308-goolf-1.4.10-no-OFED'
+        module = "${rseqc}-${toolchain}-${python}:${pysam}-${toolchain}-${python}:${kentutils}-${toolchain}"
     }
     $bigwig {
-        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:STAR/2.4.0d-goolf-1.4.10-no-OFED:KentUtils/308-goolf-1.4.10-no-OFED'
+        module = "${samtools}-${toolchain}:${mapper}-${toolchain}:${kentutils}-${toolchain}"
         cpus = 4
         memory = '15G'
         time = '12h'
     }
     $contig {
-        module = 'SAMtools/0.1.19-goolf-1.4.10-no-OFED:BEDTools/2.19.1-goolf-1.4.10-no-OFED:BamTools/2.3.0-goolf-no-OFED:KentUtils/308-goolf-1.4.10-no-OFED'
+        module = "${samtools}-${toolchain}:${bedtools}-${toolchain}:${bamtools}-${toolchain}:${kentutils}-${toolchain}"
         cpus = 4
         memory = '31G'
         time = '12h'
     }
     $quantification {
-        module = 'RSEM/1.2.15-goolf-1.4.10-no-OFED'
+        module = "${quantifier}-${toolchain}"
         memory = '31G'
         time = '24h'
     }
