Increase the number of cpus for RSEM quantification step

--- a/nextflow.config
+++ b/nextflow.config
@@ -66,6 +66,7 @@ process {
     }
     $quantification {
         module = "${quantifier}-${toolchain}"
+        cpus = 8
         memory = '31G'
         time = '24h'
     }
