Add beforeScript directive to purge modules

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,8 @@ bamtools   = 'BamTools/2.3.1'
 // Process configuration
 process {
 
+    beforeScript = 'module purge'
+
     executor = 'sge'
     queue    = 'rg-el6,long-sl65'
     penv = 'smp'
