Implement steps using process scripts and add task configurations

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,19 +1,35 @@
 // main script name
 manifest.mainScript = 'grape-pipeline.nf'
 
+// params
+params.sjOverHang = 100
+params.wigRefPrefix = 'chr'
+
 //Tools configuration
 toolchain  = 'goolf-1.4.10-no-OFED'
 python     = 'Python-2.7.3'
 
-mapper     = 'STAR/2.4.0j'
-quantifier = 'RSEM/1.2.15'
-samtools   = 'SAMtools/0.1.19'
-decomp     = 'pigz/2.3.1'
-rseqc      = 'RSeQC/2.3.9'
-kentutils  = 'KentUtils/308'
-pysam      = 'pysam/0.8.0'
-bedtools   = 'BEDTools/2.19.1'
-bamtools   = 'BamTools/2.3.1'
+//Modules
+modules = [
+    gem: [ version: '1.7.1' ],
+    STAR: [ version: '2.4.0j' ],
+    RSEM: [ version: '1.2.15' ],
+    SAMtools: [ version: '0.1.19' ],
+    pigz: [ version: '2.3.1' ],
+    RSeQC: [ version: '2.3.9', suffix: '-Python-2.7.3' ],
+    KentUtils: [ version: '308' ],
+    pysam: [ version: '0.8.0', suffix: '-Python-2.7.3' ],
+    BEDTools: [ version: '2.19.1' ],
+    BamTools: [ version: '2.3.1' ],
+    toolchain: '-goolf-1.4.10-no-OFED'
+]
+
+//Strand-view mapping for bigwig step
+bwStrandViews = [
+    NONE: ['RawSignal'],
+    MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal'],
+    MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal']
+]
 
 // Process configuration
 process {
@@ -24,50 +40,73 @@ process {
     queue    = 'rg-el6,long-sl65'
     penv = 'smp'
 
+    command = {
+        "${baseDir}/bin/${task.process}/${task.tool}${task.profile}"
+    }
+
+    profile = '' 
+    version = { modules[task.tool].version }
+    mods = { [task.tool] }
+    mod = { 
+        mods = []
+        task.mods.each { mods << "${it}/${modules[it].version}${modules.toolchain}${modules[it]?.suffix ?: ''}" } 
+        mods.join(':')
+    }
+
     errorStrategy = { params?.errorStrategy }
     
     tag = { if (view) id else species }
 
     $index {
-        module = "${mapper}-${toolchain}"
+        tool = 'STAR'
         cpus = 4
         memory = '62G'
         time = '24h'
     }
     $t_index {
-        module = "${quantifier}-${toolchain}"
+        tool = 'RSEM'
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $mapping {
-        module = "${samtools}-${toolchain}:${decomp}-${toolchain}:${mapper}-${toolchain}"
+        tool = 'STAR'
+        profile = { params.cufflinks ? "-"+params.cufflinks : '' }
+        mods = [tool, 'pigz', 'SAMtools']
         cpus = 8
         memory = '62G'
         time = '48h'
     }
     $mergeBam {
-        module = "${samtools}-${toolchain}"
+        tool = 'SAMtools'
         cpus = 8
         memory = '31G'
     }
     $inferExp {
-        module = "${rseqc}-${toolchain}-${python}:${pysam}-${toolchain}-${python}:${kentutils}-${toolchain}"
+        tool = 'RSeQC'
+        mods = [tool, 'pysam', 'KentUtils']
     }
     $bigwig {
-        module = "${samtools}-${toolchain}:${mapper}-${toolchain}:${kentutils}-${toolchain}"
+        mods = ['SAMtools', 'STAR', 'KentUtils']
+        profile = { '-' + readStrand }
+        views = {
+            bwStrandViews[readStrand]
+        }
         cpus = 4
         memory = '15G'
         time = '12h'
     }
     $contig {
-        module = "${samtools}-${toolchain}:${bedtools}-${toolchain}:${bamtools}-${toolchain}:${kentutils}-${toolchain}"
+        tool = 'CRG'
+        profile = { '-' + readStrand }
+        mods = ['SAMtools', 'BEDTools', 'BamTools', 'KentUtils']
         cpus = 4
         memory = '31G'
         time = '12h'
     }
     $quantification {
-        module = "${quantifier}-${toolchain}"
+        tool = 'RSEM'
+        profile = { '-' + readStrand }
         cpus = 8
         memory = '62G'
         time = '24h'
