Fix wrong variable names for modules

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,10 +46,10 @@ process {
 
     profile = '' 
     version = { modules[task.tool].version }
-    mods = { [task.tool] }
-    mod = { 
+    modules = { [task.tool] }
+    module = { 
         mods = []
-        task.mods.each { mods << "${it}/${modules[it].version}${modules.toolchain}${modules[it]?.suffix ?: ''}" } 
+        task.modules.each { mods << "${it}/${modules[it].version}${modules.toolchain}${modules[it]?.suffix ?: ''}" } 
         mods.join(':')
     }
 
@@ -72,7 +72,7 @@ process {
     $mapping {
         tool = 'STAR'
         profile = { params.cufflinks ? "-"+params.cufflinks : '' }
-        mods = [tool, 'pigz', 'SAMtools']
+        modules = [tool, 'pigz', 'SAMtools']
         cpus = 8
         memory = '62G'
         time = '48h'
@@ -84,10 +84,10 @@ process {
     }
     $inferExp {
         tool = 'RSeQC'
-        mods = [tool, 'pysam', 'KentUtils']
+        modules = [tool, 'pysam', 'KentUtils']
     }
     $bigwig {
-        mods = ['SAMtools', 'STAR', 'KentUtils']
+        modules = ['SAMtools', 'STAR', 'KentUtils']
         profile = { '-' + readStrand }
         views = {
             bwStrandViews[readStrand]
@@ -99,7 +99,7 @@ process {
     $contig {
         tool = 'CRG'
         profile = { '-' + readStrand }
-        mods = ['SAMtools', 'BEDTools', 'BamTools', 'KentUtils']
+        modules = ['SAMtools', 'BEDTools', 'BamTools', 'KentUtils']
         cpus = 4
         memory = '31G'
         time = '12h'
