--- a/nextflow.config
+++ b/nextflow.config
@@ -69,6 +69,9 @@ process {
         memory = '15G'
         time = '24h'
     }
+    $fastaIndex {
+        tool = 'SAMtools'
+    }
     $mapping {
         tool = 'STAR'
         profile = { params.cufflinks ? "-"+params.cufflinks : '' }
