Fix little problems with process configurations and variables

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,6 +41,7 @@ process {
     penv = 'smp'
 
     command = {
+        cpus = task.cpus
         "${baseDir}/bin/${task.process}/${task.tool}${task.profile}"
     }
 
@@ -90,6 +91,7 @@ process {
         modules = [tool, 'pysam', 'KentUtils']
     }
     $bigwig {
+        tool = 'STAR'
         modules = ['SAMtools', 'STAR', 'KentUtils']
         profile = { '-' + readStrand }
         views = {
