Update nextflow config for using templates folder

--- a/nextflow.config
+++ b/nextflow.config
@@ -42,11 +42,11 @@ process {
 
     command = {
         cpus = task.cpus
-        "${baseDir}/bin/${task.process}/${task.tool}${task.profile}"
+        "${task.process}/${task.tool}${task.profile}"
     }
 
     profile = '' 
-    version = { modules[task.tool].version }
+    version = { modules[task.tool].version }    
     modules = { [task.tool] }
     module = { 
         mods = []
