Add view for multiple bigwigs and update quantification type in nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,6 +29,9 @@ bwStrandViews = [
     NONE: ['RawSignal'],
     MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal'],
     MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal']
+    NONE: ['RawSignal','MultipleRawSignal'],
+    MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
+    MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal']
 ]
 
 // Process configuration
@@ -115,6 +118,7 @@ process {
         cpus = 8
         memory = '62G'
         time = '24h'
+        type = 'Transcriptome'
     }
 
 }
