Update modules closure in nextflow config and add read group format configuration to config and pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,17 +11,17 @@ python     = 'Python-2.7.3'
 
 //Modules
 modules = [
-    gem: [ version: '1.7.1' ],
+    GEM: [ name: 'GEMtools', version: '1.7.1', suffix: "-${python}" ],
     STAR: [ version: '2.4.0j' ],
     RSEM: [ version: '1.2.15' ],
     SAMtools: [ version: '0.1.19' ],
     pigz: [ version: '2.3.1' ],
-    RSeQC: [ version: '2.3.9', suffix: '-Python-2.7.3' ],
+    RSeQC: [ version: '2.3.9', suffix: "-${python}" ],
     KentUtils: [ version: '308' ],
-    pysam: [ version: '0.8.0', suffix: '-Python-2.7.3' ],
+    pysam: [ version: '0.8.0', suffix: "-${python}" ],
     BEDTools: [ version: '2.19.1' ],
     BamTools: [ version: '2.3.1' ],
-    toolchain: '-goolf-1.4.10-no-OFED'
+    toolchain: '-${toolchain}'
 ]
 
 //Strand-view mapping for bigwig step
@@ -50,7 +50,7 @@ process {
     modules = { [task.tool] }
     module = { 
         mods = []
-        task.modules.each { mods << "${it}/${modules[it].version}${modules.toolchain}${modules[it]?.suffix ?: ''}" } 
+        task.modules.each { mods << "${modules[it]?.name ?: it}/${modules[it].version}${modules.toolchain}${modules[it]?.suffix ?: ''}" } 
         mods.join(':')
     }
 
@@ -75,6 +75,8 @@ process {
     }
     $mapping {
         tool = 'STAR'
+        rgTagSep = ":"
+        rgListSep = " "
         profile = { params.cufflinks ? "-"+params.cufflinks : '' }
         modules = [tool, 'pigz', 'SAMtools']
         cpus = 8
