Fix toolchain gstring

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ modules = [
     pysam: [ version: '0.8.0', suffix: "-${python}" ],
     BEDTools: [ version: '2.19.1' ],
     BamTools: [ version: '2.3.1' ],
-    toolchain: '-${toolchain}'
+    toolchain: "-${toolchain}"
 ]
 
 //Strand-view mapping for bigwig step
