Modify readGroup string construction

--- a/nextflow.config
+++ b/nextflow.config
@@ -75,8 +75,7 @@ process {
     }
     $mapping {
         tool = 'STAR'
-        rgTagSep = ":"
-        rgListSep = " "
+        readGroup = { readGroupList.collect { it.join(":") }.join(" ") }
         profile = { params.cufflinks ? "-"+params.cufflinks : '' }
         modules = [tool, 'pigz', 'SAMtools']
         cpus = 8
