Move bigwig views to bigwig process configuration files

--- a/config/bigwig/CRG.config
+++ b/config/bigwig/CRG.config
@@ -1,3 +1,10 @@
+//Strand-view mapping for bigwig step
+bwStrandViews = [
+    NONE: ['RawSignal'],
+    MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal'],
+    MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal']
+]
+
 // Process configuration
 process {
 
