--- a/config/bigwig/STAR.config
+++ b/config/bigwig/STAR.config
@@ -1,3 +1,10 @@
+//Strand-view mapping for bigwig step
+bwStrandViews = [
+    NONE: ['RawSignal','MultipleRawSignal'],
+    MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
+    MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal']
+]
+
 // Process configuration
 process {
 
