Update process tag

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,6 @@ process {
 
     errorStrategy = { params?.errorStrategy }
     
-    tag = { if (view) id else species }
+    tag = { id ?: species }
 
 }
