Update nextflow.config with Docker container definition

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,16 @@ process {
 
     errorStrategy = { params?.errorStrategy }
     
-    tag = { id ?: species }
+    tag = { (id ?: species) + "-${task.tool}-${task.version}"}
+
+    container = { "grape/${task.process.toLowerCase()}:${task.tool.toLowerCase()}-${task.version}" }
+
+    $index {
+    	container = { "grape/mapping:${task.tool.toLowerCase()}-${task.version}" }
+    }
+
+    $t_index {
+    	container = { "grape/quantification:${task.tool.toLowerCase()}-${task.version}" }
+    }
 
 }
