Update process config files for Docker

--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -9,8 +9,8 @@ bwStrandViews = [
 process {
 
     $bigwig {
-        tool = 'CRG'
-        modules = ['SAMtools', 'BEDTools', 'KentUtils']
+        tool = 'RGCRG'
+        version = '0.1'
         profile = { '-' + readStrand }
         views = {
             bwStrandViews[readStrand]
