--- a/config/bigwig/STAR.config
+++ b/config/bigwig/STAR.config
@@ -10,7 +10,7 @@ process {
 
     $bigwig {
         tool = 'STAR'
-        modules = ['SAMtools', 'STAR', 'KentUtils']
+        version = '2.4.0j'
         profile = { '-' + readStrand }
         views = {
             bwStrandViews[readStrand]
