--- a/config/contig/RGCRG.config
+++ b/config/contig/RGCRG.config
@@ -2,9 +2,9 @@
 process {
 
     $contig {
-        tool = 'CRG'
+        tool = 'RGCRG'
+        version = '0.1'
         profile = { '-' + readStrand }
-        modules = ['SAMtools', 'BEDTools', 'BamTools', 'KentUtils']
         cpus = 4
         memory = '31G'
         time = '12h'
