--- a/config/fastaIndex/SAMtools.config
+++ b/config/fastaIndex/SAMtools.config
@@ -3,6 +3,8 @@ process {
 
     $fastaIndex {
         tool = 'SAMtools'
+        version = '0.1.19'
+        container = "grape/contig:rgcrg-0.1"
     }
 
 }
