--- a/config/inferExp/RSeQC.config
+++ b/config/inferExp/RSeQC.config
@@ -3,7 +3,7 @@ process {
 
     $inferExp {
         tool = 'RSeQC'
-        modules = [tool, 'pysam', 'KentUtils']
+        version = '2.3.9'
     }
 
 }
