--- a/config/mapping/GEM.config
+++ b/config/mapping/GEM.config
@@ -3,15 +3,16 @@ process {
 
     $index {
         tool = 'GEM'
+        version = '1.7.1'
         cpus = 4
         memory = '62G'
         time = '24h'
     }
     $mapping {
         tool = 'GEM'
+        version = '1.7.1'
         readGroup = { readGroupList.collect { it.join("=") }.join(",") }
         profile = { pairedEnd ? '-Paired-End' : '-Single-End' }
-        modules = [tool, 'pigz', 'SAMtools']
         cpus = 8
         memory = '62G'
         time = '48h'
