--- a/config/quantification/FLUX.config
+++ b/config/quantification/FLUX.config
@@ -3,6 +3,7 @@ process {
 
     $quantification {
         tool = 'FLUX'
+        version = '1.6.1'
         profile = { '-' + readStrand }
         cpus = 2
         memory = '31G'
