--- a/config/mapping/STAR.config
+++ b/config/mapping/STAR.config
@@ -3,15 +3,16 @@ process {
 
     $index {
         tool = 'STAR'
+        version = '2.4.0j'
         cpus = 4
         memory = '62G'
         time = '24h'
     }
     $mapping {
         tool = 'STAR'
+        version = '2.4.0j'
         readGroup = { readGroupList.collect { it.join(":") }.join(" ") }
         profile = { params.cufflinks ? "-"+params.cufflinks : '' }
-        modules = [tool, 'pigz', 'SAMtools']
         cpus = 8
         memory = '62G'
         time = '48h'
