--- a/config/quantification/RSEM.config
+++ b/config/quantification/RSEM.config
@@ -3,12 +3,14 @@ process {
 
     $t_index {
         tool = 'RSEM'
+        version = '1.2.15'
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $quantification {
         tool = 'RSEM'
+        version = '1.2.15'
         profile = { '-' + readStrand }
         cpus = 8
         memory = '62G'
