Add def to local variable definition and update container for bigwig

--- a/config/bigwig/STAR.config
+++ b/config/bigwig/STAR.config
@@ -1,5 +1,5 @@
 //Strand-view mapping for bigwig step
-bwStrandViews = [
+def bwStrandViews = [
     NONE: ['RawSignal','MultipleRawSignal'],
     MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
     MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal']
