--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -1,5 +1,5 @@
 //Strand-view mapping for bigwig step
-bwStrandViews = [
+def bwStrandViews = [
     NONE: ['RawSignal'],
     MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal'],
     MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal']
@@ -18,6 +18,7 @@ process {
         cpus = 4
         memory = '15G'
         time = '12h'
+        container = { "grape/contig:${task.tool}-${task.version}" }
     }
 
 }
