--- a/nextflow.config
+++ b/nextflow.config
@@ -26,3 +26,12 @@ process {
     }
 
 }
+
+// default includes
+includeConfig "config/fastaIndex/SAMtools.config"
+includeConfig "config/mapping/GEM.config"
+includeConfig "config/mergeBam/SAMtools.config"
+includeConfig "config/inferExp/RSeQC.config"
+includeConfig "config/bigwig/RGCRG.config"
+includeConfig "config/contig/RGCRG.config"
+includeConfig "config/quantification/FLUX.config"
