Use includeConfig in standard profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,11 +27,15 @@ process {
 
 }
 
-// default includes
-includeConfig "config/fastaIndex/SAMtools.config"
-includeConfig "config/mapping/GEM.config"
-includeConfig "config/mergeBam/SAMtools.config"
-includeConfig "config/inferExp/RSeQC.config"
-includeConfig "config/bigwig/RGCRG.config"
-includeConfig "config/contig/RGCRG.config"
-includeConfig "config/quantification/FLUX.config"
+profiles {
+    standard {
+        // default includes
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/GEM.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/RGCRG.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/FLUX.config"
+    }
+}
