--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -18,7 +18,7 @@ process {
         cpus = 4
         memory = '15G'
         time = '12h'
-        container = { "grape/contig:${task.tool}-${task.version}" }
+        container = { "grape/contig:${task.tool.toLowerCase()}-${task.version}" }
     }
 
 }
