Fix STAR bigwig container name

--- a/config/bigwig/STAR.config
+++ b/config/bigwig/STAR.config
@@ -18,6 +18,7 @@ process {
         cpus = 4
         memory = '15G'
         time = '12h'
+        container = { "grape/mapping:${task.tool.toLowerCase()}-${task.version}" }
     }
 
 }
