Update quantification config file to use mode variable

--- a/config/quantification/FLUX.config
+++ b/config/quantification/FLUX.config
@@ -8,7 +8,7 @@ process {
         cpus = 2
         memory = '31G'
         time = '24h'
-        type = 'Genome'
+        mode = 'Genome'
         fileType = 'gtf'
     }
 
