--- a/config/quantification/RSEM.config
+++ b/config/quantification/RSEM.config
@@ -15,7 +15,7 @@ process {
         cpus = 8
         memory = '62G'
         time = '24h'
-        type = 'Transcriptome'
+        mode = 'Transcriptome'
         fileType = 'tsv'
     }
 
