Update STAR mapping profile

--- a/config/mapping/STAR.config
+++ b/config/mapping/STAR.config
@@ -12,7 +12,7 @@ process {
         tool = 'STAR'
         version = '2.4.0j'
         readGroup = { readGroupList.collect { it.join(":") }.join(" ") }
-        profile = { params.cufflinks ? "-"+params.cufflinks : '' }
+        profile = { (quantificationMode ? "-"+quantificationMode : '') + (params.cufflinks ? "-"+params.cufflinks : '') }
         cpus = 8
         memory = '62G'
         time = '48h'
