Add multiple profiles to main configuration

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,7 +29,40 @@ process {
 
 profiles {
     standard {
-        // default includes
+        // default profile - same as gemflux
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/GEM.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/RGCRG.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/FLUX.config"
+    }
+
+    starrsem {
+        // profile for STAR and RSEM
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/STAR.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/STAR.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/RSEM.config"
+    }
+
+    starflux {
+        // profile for STAR and FLUX
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/STAR.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/STAR.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/FLUX.config"
+    }
+
+    gemflux {
+        // profile for GEM and FLUX
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/GEM.config"
         includeConfig "config/mergeBam/SAMtools.config"
