Update main config - use DOcker by default

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,11 @@
 // main script name
 manifest.mainScript = 'grape-pipeline.nf'
 
+//Use Docker by default
+docker {
+    enabled = true
+}
+
 // Process configuration
 process {
 
