Remove error-strategy parameter and use nextflow process configuration

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,7 +16,7 @@ process {
 
     profile = '' 
 
-    errorStrategy = { params?.errorStrategy }
+    errorStrategy = 'ignore'
     
     tag = { (id ?: species) + "-${task.tool}-${task.version}"}
 
