--- a/shippable.yml
+++ b/shippable.yml
@@ -1,5 +1,7 @@
 install:
     - curl -fsSL get.nextflow.io | bash
     - export PATH=$PWD:$PATH
+    - export NXF_VER=0.14.0-SNAPSHOT
+    - nextflow info
 script:
 	- ./compare.sh gemflux
