--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,10 @@
+# Build Environment
+build_environment: Ubuntu 14.04
 install:
-    - curl -fsSL get.nextflow.io | bash
+		- wget -qO- https://get.docker.com/ | sh
     - export PATH=$PWD:$PATH
     - export NXF_VER=0.14.0-SNAPSHOT
+    - curl -fsSL get.nextflow.io | bash
     - nextflow info
 script:
 	- ./compare.sh gemflux
