Update shippable config

--- a/shippable.yml
+++ b/shippable.yml
@@ -1,10 +1,10 @@
 # Build Environment
 build_environment: Ubuntu 14.04
 install:
-		- wget -qO- https://get.docker.com/ | sh
-    - export PATH=$PWD:$PATH
-    - export NXF_VER=0.14.0-SNAPSHOT
-    - curl -fsSL get.nextflow.io | bash
-    - nextflow info
+	- wget -qO- https://get.docker.com/ | bash
+	- export PATH=$PWD:$PATH
+  - export NXF_VER=0.14.0-SNAPSHOT
+  - curl -fsSL get.nextflow.io | bash
+  - nextflow info
 script:
 	- ./compare.sh gemflux
