--- a/shippable.yml
+++ b/shippable.yml
@@ -5,5 +5,5 @@ install:
   - curl -fsSL get.nextflow.io | bash
   - nextflow info
 script:
-  - sudo docker images
+  - sudo service docker start
   - ./compare.sh gemflux -c shippable.cfg
