--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
+build_image: jpetazzo/dind
 before_install:
   - export PATH=$PWD:$PATH 
   - export NXF_VER=0.14.0-SNAPSHOT
-  - curl -sSL https://get.docker.com/ | sh
   - env | grep DOCKER
   - curl -fsSL get.nextflow.io | bash
   - nextflow info
