--- a/shippable.yml
+++ b/shippable.yml
@@ -2,6 +2,7 @@ build_image: jpetazzo/dind
 before_install:
   - export PATH=$PWD:$PATH 
   - export NXF_VER=0.14.0-SNAPSHOT
+  - sudo wrapdocker
   - env | grep DOCKER
 
 install: true
