Proper fix for colon in job name

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ process {
 
     errorStrategy = 'ignore'
     
-    tag = { (id.replace(':', '_') ?: species) + "-${task.tool}-${task.version}"}
+    tag = { (id ? id.replace(':', '_') : species) + "-${task.tool}-${task.version}"}
 
     container = { "grape/${task.process.toLowerCase()}:${task.tool.toLowerCase()}-${task.version}" }
 
