Add values for single end stranded data in views for bigwig

--- a/config/bigwig/STAR.config
+++ b/config/bigwig/STAR.config
@@ -1,6 +1,8 @@
 //Strand-view mapping for bigwig step
 def bwStrandViews = [
     NONE: ['RawSignal','MultipleRawSignal'],
+    SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
+    ANTISENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
     MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal'],
     MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal', 'MultipleMinusRawSignal','MultiplePlusRawSignal']
 ]
