--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -1,6 +1,8 @@
 //Strand-view mapping for bigwig step
 def bwStrandViews = [
     NONE: ['RawSignal'],
+    SENSE: ['MinusRawSignal', 'PlusRawSignal'],
+    ANTISENSE: ['MinusRawSignal', 'PlusRawSignal'],
     MATE1_SENSE: ['MinusRawSignal', 'PlusRawSignal'],
     MATE2_SENSE: ['MinusRawSignal', 'PlusRawSignal']
 ]
