--- a/config/quantification/RSEM.config
+++ b/config/quantification/RSEM.config
@@ -11,7 +11,7 @@ process {
     $quantification {
         tool = 'RSEM'
         version = '1.2.15'
-        profile = { '-' + readStrand }
+        profile = { '-' + (pairedEnd ? 'Paired-End' : 'Single-End') + '-' + readStrand }
         cpus = 8
         memory = '62G'
         time = '24h'
