Also add support for multiple versions of GEM

--- a/config/mapping/GEM.config
+++ b/config/mapping/GEM.config
@@ -12,7 +12,7 @@ process {
         tool = 'GEM'
         version = '1.7.1'
         readGroup = { readGroupList.collect { it.join("=") }.join(",") }
-        profile = { pairedEnd ? '-Paired-End' : '-Single-End' }
+        profile = { "-${task.version.split("\\.")[0..1].join(".")}" + pairedEnd ? '-Paired-End' : '-Single-End' }
         cpus = 8
         memory = '62G'
         time = '48h'
