--- a/circle.yml
+++ b/circle.yml
@@ -6,5 +6,6 @@ machine:
     
 test:
   override:
+    - curl -fsSL get.nextflow.io | bash && chmod +x nextflow
     - ./nextflow -download
     - ./nextflow run . -with-docker
