adds options for docker so that created files are no longer owned by root

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,9 @@ manifest.mainScript = 'grape-pipeline.nf'
 //Use Docker by default
 docker {
     enabled = true
+    sudo = false
+    fixOwnership = true
+    runOptions = "-u `id -u $USER`"
 }
 
 // Process configuration
