--- a/nextflow.config
+++ b/nextflow.config
@@ -76,4 +76,19 @@ profiles {
         includeConfig "config/contig/RGCRG.config"
         includeConfig "config/quantification/FLUX.config"
     }
+    
+    test {
+        // test profile - same as 'standard'       
+        params.index = "$baseDir/test-index.txt"
+        params.genome = "$baseDir/data/genome.fa"
+        params.annotation = "$baseDir/data/annotation.gtf"  
+        
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/GEM.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/RGCRG.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/FLUX.config"
+    }
 }
